// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch is checked 1`] = `
<div
  aria-hidden={true}
  className="root checked"
  onClick={[Function]}
  role="presentation"
>
  <input
    checked={true}
    className="input"
    readOnly={true}
    type="checkbox"
  />
  <div
    className="switch checked"
  >
    <span
      className="thumb"
    />
  </div>
</div>
`;

exports[`Switch is disabled 1`] = `
<div
  aria-hidden={true}
  className="root disabled"
  onClick={[Function]}
  role="presentation"
>
  <input
    checked={false}
    className="input"
    disabled={true}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="switch"
  >
    <span
      className="thumb"
    />
  </div>
</div>
`;

exports[`Switch is disabled and renders a label 1`] = `
<div
  aria-hidden={true}
  className="root disabled"
  onClick={[Function]}
  role="presentation"
>
  <input
    checked={false}
    className="input"
    disabled={true}
    label="click here"
    readOnly={true}
    type="checkbox"
  />
  <div
    className="switch"
  >
    <span
      className="thumb"
    />
  </div>
  <label
    className="label"
  >
    click here
  </label>
</div>
`;

exports[`Switch renders correctly 1`] = `
<div
  aria-hidden={true}
  className="root"
  onClick={[Function]}
  role="presentation"
>
  <input
    checked={false}
    className="input"
    readOnly={true}
    type="checkbox"
  />
  <div
    className="switch"
  >
    <span
      className="thumb"
    />
  </div>
</div>
`;

exports[`Switch renders with label 1`] = `
<div
  aria-hidden={true}
  className="root"
  onClick={[Function]}
  role="presentation"
>
  <input
    checked={false}
    className="input"
    label="click here"
    readOnly={true}
    type="checkbox"
  />
  <div
    className="switch"
  >
    <span
      className="thumb"
    />
  </div>
  <label
    className="label"
  >
    click here
  </label>
</div>
`;
